<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070B10"
    android:orientation="vertical"
    android:padding="12dp">

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:background="#000000">

    <androidx.media3.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:resize_mode="fit"
        app:show_buffering="when_playing"
        app:use_controller="false" />

    <TextView
        android:id="@+id/current_source_label"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="top|start"
        android:layout_margin="12dp"
        android:background="#AA000000"
        android:gravity="center"
        android:minWidth="128dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="@string/current_source_default"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />

  </FrameLayout>

  <LinearLayout
      android:id="@+id/control_panel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <Button
          android:id="@+id/http_sample_button"
          style="@style/DemoButton"
          android:text="@string/http_sample" />

      <Button
          android:id="@+id/dash_sample_button"
          style="@style/DemoButton"
          android:text="@string/dash_sample" />

      <Button
          android:id="@+id/hls_sample_button"
          style="@style/DemoButton"
          android:text="@string/hls_sample" />

      <Button
          android:id="@+id/pick_usb_button"
          style="@style/DemoButton"
          android:text="@string/pick_usb_file" />

      <Button
          android:id="@+id/playlist_button"
          style="@style/DemoButton"
          android:text="@string/load_demo_playlist" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <Button
          android:id="@+id/play_button"
          style="@style/DemoButton"
          android:text="@string/resume" />

      <Button
          android:id="@+id/pause_button"
          style="@style/DemoButton"
          android:text="@string/pause" />

      <Button
          android:id="@+id/stop_button"
          style="@style/DemoButton"
          android:text="@string/stop" />

      <Button
          android:id="@+id/seek_back_button"
          style="@style/DemoButton"
          android:text="@string/seek_back" />

      <Button
          android:id="@+id/seek_forward_button"
          style="@style/DemoButton"
          android:text="@string/seek_forward" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <Button
          android:id="@+id/seek_to_button"
          style="@style/DemoButton"
          android:text="@string/seek_start" />

      <Button
          android:id="@+id/previous_button"
          style="@style/DemoButton"
          android:text="@string/previous_item" />

      <Button
          android:id="@+id/next_button"
          style="@style/DemoButton"
          android:text="@string/next_item" />

      <Button
          android:id="@+id/audio_button"
          style="@style/DemoButton"
          android:text="@string/cycle_audio" />

      <Button
          android:id="@+id/text_button"
          style="@style/DemoButton"
          android:text="@string/cycle_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <Button
          android:id="@+id/speed_half_button"
          style="@style/DemoButton"
          android:text="@string/speed_half" />

      <Button
          android:id="@+id/speed_normal_button"
          style="@style/DemoButton"
          android:text="@string/speed_normal" />

      <Button
          android:id="@+id/speed_one_half_button"
          style="@style/DemoButton"
          android:text="@string/speed_one_half" />

      <Button
          android:id="@+id/speed_two_button"
          style="@style/DemoButton"
          android:text="@string/speed_two" />

      <Button
          android:id="@+id/text_pref_button"
          style="@style/DemoButton"
          android:text="@string/prefer_text" />
    </LinearLayout>

  </LinearLayout>

</LinearLayout>
